--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
   },
   "homepage": "https://github.com/jasim08/make_your_views_api#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "handlebars": "^4.7.8",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "moment-timezone": "^0.5.43",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.4",
     "sequelize": "^6.32.1"
