--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DB=mysql
 DBNAME=makeyourviews
 DBHOST=localhost
 DBUSERNAME=root
-DBPASSWORD=rootuser
+DBPASSWORD=rootUser321MYV&
 
 
 OTPEXPIRES=60
