change env file

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ JWT_EXPIRE_TIME=45d
 ENCRYPTION_KEY=SECURE_ENCRYPTION_KEY_MAKE_YOUR_VIEWS_SECURE
 DB=mysql
 DBNAME=makeyourviews
-DBHOST=localhost
+DBHOST=127.0.0.1
 DBUSERNAME=root
 DBPASSWORD=rootUser321MYV&
 
