--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ ENCRYPTION_KEY=SECURE_ENCRYPTION_KEY_MAKE_YOUR_VIEWS_SECURE
 DB=mysql
 DBNAME=makeyourviews
 DBHOST=127.0.0.1
-DBUSERNAME=root
-DBPASSWORD=rootUser321MYV&
+DBUSERNAME=rootuser
+DBPASSWORD=rootUser&123
 
 
 OTPEXPIRES=60
