push to main - get links

--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-PORT=3000
-
-NODE_ENV=local
+NODE_ENV=PROD
 PORT=3200
 
 JWT_SECRET=MAKEYOURVIEWS:JWT_SECRET:MAKEYOURVIEWS
@@ -9,9 +7,19 @@ JWT_EXPIRE_TIME=45d
 ENCRYPTION_KEY=SECURE_ENCRYPTION_KEY_MAKE_YOUR_VIEWS_SECURE
 DB=mysql
 DBNAME=makeyourviews
-DBHOST=127.0.0.1
+
+
+# PROD
 DBUSERNAME=rootuser
+DBHOST=127.0.0.1
 DBPASSWORD=rootUser&123
+# PROD
+
+# LOCAL
+# DBUSERNAME=root
+# DBHOST=localhost
+# DBPASSWORD=rootuser
+# LOCAL
 
 
 OTPEXPIRES=60
