--- a/.env
+++ b/.env
@@ -25,5 +25,5 @@ DBPASSWORD=rootUser&123
 OTPEXPIRES=60
 
 SYSTEM_URL=helperscript
-GMAIL_APP_PASSWORD=walnmsrsvxylwhut
-GMAIL_ACCOUNT=jasim@animeta.ai
+GMAIL_APP_PASSWORD=ftwbjpwdqtlmeklc
+GMAIL_ACCOUNT=makeyourteampro@gmail.com
