myt changes initial

--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ JWT_EXPIRE_TIME=45d
 ENCRYPTION_KEY=SECURE_ENCRYPTION_KEY_MAKE_YOUR_VIEWS_SECURE
 DB=mysql
 DBNAME=makeyourviews
+MYTDBNAME=makeyourteam
 
 
 # PROD
@@ -16,9 +17,9 @@ DBPASSWORD=rootUser&123
 # PROD
 
 # LOCAL
-# DBUSERNAME=root
-# DBHOST=localhost
-# DBPASSWORD=rootuser
+DBUSERNAME=root
+DBHOST=localhost
+DBPASSWORD=rootuser
 # LOCAL
 
 
