--- a/.env
+++ b/.env
@@ -17,9 +17,9 @@ DBPASSWORD=rootUser&123
 # PROD
 
 # LOCAL
-DBUSERNAME=root
-DBHOST=localhost
-DBPASSWORD=rootuser
+# DBUSERNAME=root
+# DBHOST=localhost
+# DBPASSWORD=rootuser
 # LOCAL
 
 
