--- a/.env
+++ b/.env
@@ -11,9 +11,9 @@ MYTDBNAME=makeyourteam
 
 
 # PROD
-DBUSERNAME=rootuser
+DBUSERNAME=root
 DBHOST=127.0.0.1
-DBPASSWORD=rootUser&123
+DBPASSWORD=rootUser321MYV&
 # PROD
 
 # LOCAL
